Added tests for Everything except Node.